--- a/css/styless.scss
+++ b/css/styless.scss
@@ -1,3 +1,10 @@
+@import "https://fonts.googleapis.com";
+@import "https://fonts.gstatic.com" crossorigin;
+@import "https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Poppins:wght@400;500&family=Roboto:wght@400;500;700&display=swap";
+@import "media.css";
+@import "owl.theme.default.css";
+@import "owl.carousel.css";
+@import "bootstrap.css";
 
 * {
   margin: 0;
